force-app/main/default/objects/Cancellation_Case_Rule__c/Cancellation_Case_Rule__c.object-meta.xml
<CustomObject>
    <description>NICC-026959</description>
    <label>Cancellation Case Rule</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cancellation Case Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>