force-app/main/default/objects/Cancellation_Case_Rule__c/fields/Assignment_Queue__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Queue__c</fullName>
    <description>NICC-026959</description>
    <label>Assignment Queue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Case CR Approvers</fullName>
            </value>
            <value>
                <fullName>Case CR Approvers - Asia</fullName>
            </value>
            <value>
                <fullName>Case CR Approvers - EMEA</fullName>
            </value>
            <value>
                <fullName>Case CR Approvers - US</fullName>
            </value>
            <value>
                <fullName>PMS Development</fullName>
            </value>
            <value>
                <fullName>PMS - Email Incoming</fullName>
            </value>
            <value>
                <fullName>PMS Holding</fullName>
            </value>
            <value>
                <fullName>PMS Planning</fullName>
            </value>
            <value>
                <fullName>PMS - Rezexchange</fullName>
            </value>
            <value>
                <fullName>PMS - Services</fullName>
            </value>
            <value>
                <fullName>PMS - SPT Level 1</fullName>
            </value>
            <value>
                <fullName>PMS - SPT Level 2</fullName>
            </value>
            <value>
                <fullName>PMS - Technical SPT</fullName>
            </value>
            <value>
                <fullName>Q-Americas</fullName>
            </value>
            <value>
                <fullName>Q-APAC</fullName>
            </value>
            <value>
                <fullName>Q- APAC Case Project</fullName>
            </value>
            <value>
                <fullName>Q-AP Hosted</fullName>
            </value>
            <value>
                <fullName>Q-AP Install</fullName>
            </value>
            <value>
                <fullName>Q-Audit Complete</fullName>
            </value>
            <value>
                <fullName>Q-Audit Request</fullName>
            </value>
            <value>
                <fullName>Q-Billable Work</fullName>
            </value>
            <value>
                <fullName>Q-BRT</fullName>
            </value>
            <value>
                <fullName>Q-CRS-GES</fullName>
            </value>
            <value>
                <fullName>Q-CSA</fullName>
            </value>
            <value>
                <fullName>Q-Customer Relations</fullName>
            </value>
            <value>
                <fullName>Q-Delphi.fdc Docs</fullName>
            </value>
            <value>
                <fullName>Q-Delphi CRel</fullName>
            </value>
            <value>
                <fullName>Q-Dev Escalation</fullName>
            </value>
            <value>
                <fullName>Q-Down Site</fullName>
            </value>
            <value>
                <fullName>Q-DS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>