force-app/main/default/objects/Cancellation_Case_Rule__c/fields/Cancellation_Status__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Status__c</fullName>
    <description>NICC-026959</description>
    <label>Cancellation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>User Reduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>