force-app/main/default/objects/Cancellation_Case_Rule__c/fields/Case_Description__c.field-meta.xml
<CustomField>
    <fullName>Case_Description__c</fullName>
    <description>NICC-026959</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>