force-app/main/default/objects/Cancellation_Case_Rule__c/fields/Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>Case_Subject__c</fullName>
    <description>NICC-026959</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Use &lt;&lt;DI_NAME&gt;&gt; to merge in DI name being cancelled</inlineHelpText>
    <label>Case Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>