force-app/main/default/objects/Cancellation_Case_Rule__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-026959</description>
    <inlineHelpText>Case creation is bypassed when checked.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>