force-app/main/default/objects/Cancellation_Case_Rule__c/listViews/All_Cancellation_Case_Rules.listView-meta.xml
<ListView>
    <fullName>All_Cancellation_Case_Rules</fullName>
    <columns>NAME</columns>
    <columns>Case_Subject__c</columns>
    <columns>Case_Description__c</columns>
    <columns>Assignment_Queue__c</columns>
    <columns>Cancellation_Status__c</columns>
    <columns>Inactive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Cancellation Case Rules</label>
</ListView>